# sfs-processor

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  README_EN.md  add_pdf_url_to_frontmatter.py  apply_expiration.py  config.example.yaml  config.py  convert_html_to_markdown.py  convert_json_to_markdown.py  download_sfs_documents.py  download_years.sh  fetch_new_sfs_documents.py  find_expiring_docs.py  format_sfs_md.py  format_sfs_text.py  format_sfs_text_to_md.py  html_diff_page.py  html_export.py  kommande.yaml  populate_index_pages.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  sfs_html_export.py  sfs_processor.py  sort_frontmatter.py  upcoming_changes.py  upload_to_r2.py
.github/workflows/: fetch-sfs-documents-workflow.yml  fetch-sfs-documents.yml  fetch-sfs-workflow.yml  git-export-workflow.yml  github-pages-workflow.yml  html-export-workflow.yml  sfs-markdown-package.yml  test-workflow.yml  testdocs-workflow.yml  upcoming-changes-workflow.yml
analyses/: analyze_forarbeten.py  analyze_ikraft_overgangsbestammelse.py  analyze_ikraft_years.py  analyze_kap_upphavd_context.py  analyze_unmatched_law_names.py
data/: agencies.json  amount-references.json  amount-references.yaml  law-names.json  lawNames.json  sfs_document_schema.json  test-doc-ids.json
data/document_patterns/: README.md  andrastycke-inte-rubrik.txt  andringsnotering-radbrytning.txt  andringsnotering.txt  avdelning-overgangsbestammelser.txt  avdelning-versaler.txt  avdelningar-kapitel.txt  avdelningar-konvention.txt  avdelningar.txt  avses-med.txt  bokstavslista.txt  enskilt-stycke.txt  extra-bilaga-och-overgangsbestammelse.txt  extra-bilaga.txt  extra-overgangsbestammelse-med-rubriker.txt  extra-overgangsbestammelser.txt  kapitel.txt  lista-numrerad.txt  lista-strecksatser.txt  paragraf-med-lista.txt  paragraf.txt  paragrafer.txt  paragraflista-med-bindestreck.txt  paragraflista-med-mellanslag.txt  paragraflista.txt  regression_10kap-ellagen.txt  rubrik-inte-kapitelrubrik.txt  rubriker.txt  rubriknivaer.txt  stycke-inte-rubrik.txt  tabell-foljd-av-kort-rubrik.txt  tabell-med-rubriker.txt  tabell-sju-kolumner.txt  tabell-tva-korta-vansterceller.txt  tabell.txt  temporal-kapitel-post.txt  temporal-kapitel-pre.txt  temporal-kapitelrubriker.txt  temporal-paragraf-med-tabell.txt  temporal-paragraf.txt  (+4 more)
data/reports/: lagnamn_rapport.md  myndigheter_rapport.md
data/sfs_json/: sfs-1920-405.json  sfs-1927-485.json  sfs-1942-740.json  sfs-1946-804.json  sfs-1949-381.json  sfs-1955-227.json  sfs-1960-729.json  sfs-1969-84.json  sfs-1974-212.json  sfs-1975-1339.json  sfs-1975-1345.json  sfs-1975-49.json  sfs-1975-927.json  sfs-1976-725.json  sfs-1977-284.json  sfs-1977-945.json  sfs-1978-164.json  sfs-1978-558.json  sfs-1979-1091.json  sfs-1979-230.json  sfs-1979-664.json  sfs-1982-1005.json  sfs-1982-517.json  sfs-1983-737.json  sfs-1984-387.json  sfs-1984-404.json  sfs-1984-535.json  sfs-1984-831.json  sfs-1984-890.json  sfs-1985-125.json  sfs-1988-244.json  sfs-1989-548.json  sfs-1989-891.json  sfs-1990-12.json  sfs-1990-195.json  sfs-1990-52.json  sfs-1990-717.json  sfs-1990-927.json  sfs-1991-1137.json  sfs-1991-1559.json  (+397 more)
docs/: CONFIGURATION.md  JSON_SCHEMA_VALIDATION.md  migration_guide.md  project_structure.md
docs/adr/: 001-markdown-som-mellanformat.md  001-semantiska-temporal-taggar.md  002-import-fran-regeringskansliet.md  003-git-commits-historiska-datum.md  004-markdown-som-mellanformat.md  004-semantiska-temporal-taggar.md  005-github-pages-hosting.md  README.md
downloaders/: download_riksdagen.py  download_sfs_docs.py  download_years.sh  eur_lex_api.py  fetch_new_sfs_docs.py  riksdagen_api.py  rkrattsbaser_api.py
examples/: config_usage.py
exporters/git/: BATCH_EXPORT_GIT.md  __init__.py  batch_export_to_git.py  batch_processor.py  generate_commits.py  generate_init_commit_for_doc.py  git_utils.py  init_commit.py  init_commits_batch_processor.py  temporal_commits_batch_processor.py
exporters/html/: __init__.py  delete_web_from_r2.py  eli_utils.py  html_diff_page.py  html_export.py  populate_index_pages.py  selex-init.js  styling_constants.py  upload_html_to_r2.py  (+1 more)
formatters/: add_pdf_url_to_frontmatter.py  apply_agency_links.py  apply_links.py  format_sfs_text.py  frontmatter_manager.py  predocs_parser.py  sort_frontmatter.py  table_converter.py  tag_swedish_amounts.py
json/: sfs-1987-1185.json
markdown/: 1987-1185.md
reports/: claude-usage.md  eu_analysis_2015-2025.md
scripts/: README_check_pdf_availability.md  add_law_names.py  analyze_agency_mentions.py  analyze_eu_connection.py  analyze_forarbeten.py  analyze_ikraft_overgangsbestammelse.py  analyze_ikraft_years.py  analyze_kap_upphavd_context.py  analyze_law_name_issues.py  analyze_link_patterns_with_documents.py  analyze_unmatched_law_names.py  check_pdf_availability.py  dry_run_git_commits.py  extract_unmatched_laws.py  find_missing_law_names.py  run_3year_commits.py  run_3year_commits_with_timeout.sh  serve_html.py  temporal_commits_batch.py  upload_json_to_r2.py  validate_law_names.py
sfs-test/: README.md
temporal/: __init__.py  amendments.py  apply_expiration.py  apply_temporal.py  find_expiring_docs.py  generate_commits.py  get_temporal_date_range.py  overgangsbestammelser.py  parse_anteckningar.py  title_temporal.py  upcoming_changes.py
test/: conftest.py  test_agency_linking.py  test_amendments.py  test_apply_temporal.py  test_cli.py  test_datetime_utils.py  test_document_validation.py  test_file_utils.py  test_find_expiring_docs.py  test_format_sfs_text.py  test_frontmatter_manager.py  test_integrated_title_temporal.py  test_linking.py  test_parse_anteckningar.py  test_predocs.py  test_table_converter.py  test_tag_swedish_amounts.py  test_title_temporal.py  test_upcoming_changes.py  test_yaml_utils.py
tests/: conftest.py  test_basic.py
util/: __init__.py  datetime_utils.py  doctype_utils.py  document_validator.py  file_utils.py  normtyp_utils.py  predocs_parser.py  text_utils.py  title_temporal.py  yaml_utils.py
utils/: table_converter.py
(+465 files in other folders)
