[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sfs-processor"
version = "0.1.0"
description = "Konvertera svensk författningssamling (SFS) från JSON till Markdown och andra format"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Martin Rimskog", email = "martin@marca.se"},
]
dependencies = [
    "requests>=2.25.0",
    "pyyaml>=6.0",
    "markdown>=3.4.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "requests-mock>=1.11.0",
]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "requests-mock>=1.11.0",
]

[project.scripts]
sfs-processor = "sfs_processor:main"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.isort]
known-first-party = ["formatters", "exporters", "temporal", "util", "downloaders"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__ files
"test_*.py" = ["ARG"]     # unused arguments in tests

[tool.pytest.ini_options]
# Test discovery
testpaths = ["test"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Output options
addopts = [
    "-v",                          # Verbose output
    "--tb=short",                  # Shorter traceback format
    "--strict-markers",            # Error on unknown markers
    "--color=yes",                 # Colored output
    "-ra",                         # Show summary of all test outcomes
    "--cov=.",                     # Coverage for all modules
    "--cov-report=term-missing",   # Show missing lines in coverage
    "--cov-report=html:htmlcov",   # HTML coverage report
    "--cov-branch",                # Branch coverage
]

# Markers for test categorization
markers = [
    "unit: Unit tests that don't require external resources",
    "integration: Integration tests that test multiple components",
    "api: Tests that interact with external APIs (mocked)",
    "slow: Tests that take significant time to run",
]

# Coverage settings
[tool.coverage.run]
branch = true
source = ["."]
omit = [
    "test/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/site-packages/*",
    ".venv/*",
    "venv/*",
    "sfs_docs/*",
    "SFS/*",
    "output/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
]
